--- a/templates/feed360/feed360.html
+++ b/templates/feed360/feed360.html
@@ -255,8 +255,7 @@
   <nav  aria-label="breadcrumb" >
       <ol class="breadcrumb" >
         <li class="breadcrumb-item"><a href="{% url 'index' %}"> <i class="fas fa-home"></i></a></li>
-        <li class="breadcrumb-item"><a href="{% url 'cp' %}">Profes Pro</a></li>
-        <li class="breadcrumb-item active"><a style="color: var(--primary); font-size: 15px; padding: 2px;" href="{% url 'cp_history' %}">Records</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'feed360' %}">Feed360</a></li>
       </ol>
     </nav>
 </div>
