--- a/templates/ATS/view.html
+++ b/templates/ATS/view.html
@@ -54,7 +54,7 @@ ATS Feedback for <small>ATS{{record.id}}</small>
       <li class="breadcrumb-item"><a style="color:var(--c1); text-decoration: none;"href="{% url 'index' %}"> <i class="fas fa-home"></i></a></li>
 
       <li class="breadcrumb-item"><a style="color:var(--c1); text-decoration: none;"href="{% url 'ats' %}">ATS</a></li>
-      <li class="breadcrumb-item "><a style="color:var(--c2); text-decoration: none;" href="{% url 'ats_history' %}">Records</a></li>
+      <li class="breadcrumb-item active"><a style="color:var(--c2); text-decoration: none;" href="{% url 'ats_history' %}">Records</a></li>
       <li class="breadcrumb-item active" aria-current="page">ATS{{record.id}}</li>
     </ol>
   </nav>
