--- a/templates/auth_base.html
+++ b/templates/auth_base.html
@@ -147,7 +147,7 @@
                 text-align: center;
             }
             .item-center{
-                background:#ffffff80;
+                background:none;
                 padding: 40px;
                 border-radius: 16px;
                 box-shadow: 0 12px 48px rgba(0, 0, 0, 0.15);
