--- a/templates/chatbot/index.html
+++ b/templates/chatbot/index.html
@@ -58,7 +58,7 @@
     
     
     .his{
-        background-color: #ffffff80;
+        background-color: none;
         padding: 20px;
         max-width:100%;
         padding-top: 2em;
